DBC22-4618: Fix for Map layers overflow scroll

--- a/src/frontend/src/Components/map/filter/FilterTabs.scss
+++ b/src/frontend/src/Components/map/filter/FilterTabs.scss
@@ -22,16 +22,16 @@ button.btn.open-filters {
   box-shadow: 0px 1.937px 4.358px 0px rgba(0, 0, 0, 0.13), 0px 0.363px 1.089px 0px rgba(0, 0, 0, 0.10);
   display: flex;
   flex-direction: column;
-  height: 676px;
+  height: calc(100% - 2px);
   transition: all 0.25s ease-in-out;
-  
-  @media (min-width: 576px) {
-    max-height: calc(100vh - 166px);
-  }
 
   //specific styles for Firefox
   @-moz-document url-prefix() {
     height: 100%;
+  }
+  
+  @media (min-width: 576px) {
+    max-height: calc(100vh - 166px);
   }
 
   &.closed {
